--- a/TangyWeb_Server/TangyWeb_Server.csproj
+++ b/TangyWeb_Server/TangyWeb_Server.csproj
@@ -8,5 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Tangy_Models/Tangy_Models.csproj" />
+    <ProjectReference Include="../Tangy_Business/Tangy_Business.csproj" />
+    <ProjectReference Include="../Tangy_Common/Tangy_Common.csproj" />
   </ItemGroup>
 </Project>
